bug-fixed: alignment of attachment buttons

--- a/src/app/component/message-attachment/message-attachment.component.scss
+++ b/src/app/component/message-attachment/message-attachment.component.scss
@@ -1,27 +1,19 @@
 #buttons-in-message {
     text-align: right;
-    display: block; 
-    // margin-top: -6px;
-    // margin-bottom: 5px;
-    // margin-right: 16px; //align attachment-buttons to bubble sent message
-    margin: 4px 16px;
+    display: block;
+    margin-right: 16px; //align attachment-buttons to bubble sent message
     height: auto;
+    width: 85%;
+    float: right;
 
     .buttons-wrapper {
-        // margin-top: 0px;
-        // display: flex;
-        // flex-wrap: wrap;
-        // -webkit-box-pack: end;
-        // justify-content: flex-end;
-        // width: 100%;
-        // border: none;
-
-        // width: 85%;
-        // float: right;
-        // display: flex;
-        // flex-wrap: wrap;
-        // -webkit-box-pack: end;
-        // justify-content: flex-end;
+        margin-top: 0px;
+        display: flex;
+        flex-wrap: wrap;
+        -webkit-box-pack: end;
+        justify-content: flex-end;
+        width: 100%;
+        border: none;
     }
 
     .div-button {
